# Summit

./: .gitattributes  .gitignore  HELP.md  build.ps1  latest.json  package-lock.json  package.json  setup-cloud-files.ps1  tailwind.config.js
.github/workflows/: release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/resources/: ImmichDesktop.cer  Summit.cer  sparse.msix
src-tauri/shell-ext/: Cargo.toml
src-tauri/shell-ext/src/: lib.rs
src-tauri/src/: debug_log.rs  lib.rs
src-tauri/src/api/: assets.rs  auth.rs  discovery.rs  mod.rs  types.rs
src-tauri/src/cloud_files/: mod.rs
src-tauri/src/commands/: auth_commands.rs  connection_commands.rs  mod.rs  settings_commands.rs  sync_commands.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sync/: db.rs  mod.rs
src/components/: UpdateDialog.tsx
src/components/settings/: AccountList.tsx  AddAccountModal.tsx  AppSettingsTab.tsx  EditAccountModal.tsx  FolderSettings.tsx
src/lib/: ipc.ts
src/pages/: Dashboard.tsx  Help.tsx  Settings.tsx
src/stores/: settingsStore.ts
