[package]
name = "summit-shell-ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "summit_shell_ext"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_IO",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Storage_Provider",
    "implement",
] }
